# xeus-lix

./: .gitignore  CMakeLists.txt  README.md  flake.nix
kernelspec/: kernel.json.in
notebooks/: Intro.ipynb  test.nix
src/: lix_eval_helpers.cpp  lix_interpreter.cpp  lix_interpreter.hpp  lix_logger.cpp  lix_logger.hpp  lix_repl_commands.cpp  main.cpp
test/: CMakeLists.txt  test_lix_kernel.py
